@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2012, 2024, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2012, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -31,7 +31,7 @@
  * @comment Locale providers: CLDR,SPI
  * @run main/othervm -Djava.locale.providers=CLDR,SPI NarrowNamesTest CLDR,SPI
  * @comment Locale providers: CLDR
- * @run main/othervm -Djava.locale.providers=CLDR NarrowNamesTest CLDR
+ * @run main NarrowNamesTest CLDR
  */
 
 import java.time.LocalDateTime;
